[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player/Blaster.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Flash.tres" type="Material" id=2]
[ext_resource path="res://Assets/mixkit-laser-cannon-shot-1678.wav" type="AudioStream" id=3]
[ext_resource path="res://Enemy.gd" type="Script" id=4]
[ext_resource path="res://Assets/muzzleflash.obj" type="ArrayMesh" id=5]
[ext_resource path="res://Assets/mixkit-man-in-pain-2197.mp3" type="AudioStream" id=6]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 1, 0, 0, 1 )
roughness = 0.62

[sub_resource type="CapsuleMesh" id=2]
material = SubResource( 1 )
radius = 0.5
rings = 10

[sub_resource type="Skin" id=3]

[sub_resource type="ConvexPolygonShape" id=4]
points = PoolVector3Array( -0.487988, 0.0464351, 0.592389, -0.486288, -0.0925466, -0.567186, -0.484532, 0.11536, -0.519027, -0.46518, 0.116285, -0.63939, -0.459807, -0.183851, 0.563089, -0.43877, 0.20778, 0.611858, -0.412425, 0.274829, -0.561251, -0.412424, -0.274828, -0.56125, -0.396092, -0.116496, -0.780433, -0.395838, -0.162856, 0.756665, -0.390308, -0.298411, 0.585311, -0.349945, 0.139883, -0.828197, -0.304586, 0.117152, 0.878478, -0.282149, -0.0704762, 0.905011, -0.277129, -0.39264, 0.634883, -0.277126, 0.392636, 0.634876, -0.274951, -0.412355, -0.56121, -0.274951, 0.412355, 0.56121, -0.274951, 0.412354, -0.561209, -0.254388, 0.34698, -0.751715, -0.235374, -0.0940896, -0.929704, -0.211756, 0.14107, -0.929279, -0.186305, -0.349327, 0.803343, -0.186238, 0.302582, 0.849577, -0.18391, -0.459782, 0.563105, -0.140025, -0.349967, -0.828128, -0.116455, 0.396128, -0.7804, -0.0941481, -0.23541, 0.929674, -0.0925951, 0.486286, -0.567116, -0.0463984, -0.488003, -0.592336, -0.0463984, 0.488003, 0.592336, -0.0463983, -0.488002, 0.592335, 0.0463626, -0.488003, -0.592337, 0.0472468, -0.11839, -0.982599, 0.0472468, 0.11839, 0.982599, 0.0925609, 0.486292, -0.567124, 0.0929106, -0.418274, 0.755246, 0.0945302, 0.0945058, -0.981267, 0.11537, -0.484534, 0.518967, 0.115372, 0.48454, 0.518974, 0.116513, 0.396122, 0.780389, 0.13999, -0.34997, -0.828136, 0.14074, 0.258, -0.902891, 0.183879, -0.459792, -0.563118, 0.186272, 0.349333, -0.803356, 0.255912, 0.279047, 0.825786, 0.255928, -0.302408, 0.802588, 0.258022, -0.140626, 0.902914, 0.274926, 0.412368, 0.561228, 0.274926, -0.412368, 0.561229, 0.298399, 0.390329, -0.585264, 0.304556, -0.117154, -0.878497, 0.304556, 0.117155, -0.878498, 0.344292, -0.344282, -0.60807, 0.349989, 0.139877, 0.828158, 0.395818, -0.162863, 0.756697, 0.412445, -0.274802, 0.561196, 0.412445, 0.274803, 0.561197, 0.438245, -0.230643, -0.564947, 0.438792, 0.207762, -0.611805, 0.486294, -0.0925364, 0.567123, 0.486296, -0.0925368, -0.567126, 0.486296, 0.0925368, 0.567126, 0.488001, 0.0464306, -0.592332 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.4, 0.1, 0.4 )

[sub_resource type="SphereShape" id=6]
radius = 10.0

[node name="Enemy" type="KinematicBody" groups=[
"enemy",
]]
collision_layer = 3
collision_mask = 3
script = ExtResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.714782, 0 )
mesh = SubResource( 2 )
skin = SubResource( 3 )
material/0 = null

[node name="Body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.714782, 0 )
shape = SubResource( 4 )

[node name="Feet" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.100806, 0 )
shape = SubResource( 5 )

[node name="Pivot" type="Position3D" parent="."]

[node name="Blaster" parent="Pivot" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.789623, 0.837202, 0.708762 )

[node name="GunSFX" type="AudioStreamPlayer3D" parent="Pivot/Blaster"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.132982, 0.0778723, -0.809823 )
stream = ExtResource( 3 )
unit_db = -0.5
emission_angle_enabled = true
emission_angle_degrees = 54.0
emission_angle_filter_attenuation_db = -6.9

[node name="Flash" type="Spatial" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.789623, 0.837202, 0.708762 )
visible = false

[node name="muzzleflash" type="MeshInstance" parent="Pivot/Flash"]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0.492739, -0.192629, -1.28 )
mesh = ExtResource( 5 )
material/0 = ExtResource( 2 )
material/1 = ExtResource( 2 )
material/2 = ExtResource( 2 )

[node name="OmniLight" type="OmniLight" parent="Pivot/Flash"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.513054, -0.232031, -1.43417 )
light_color = Color( 1, 0.952941, 0.74902, 1 )
light_energy = 40.0
omni_attenuation = 5.27803

[node name="Timer" type="Timer" parent="Pivot/Flash"]
wait_time = 0.2
one_shot = true

[node name="RayCast" type="RayCast" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.626287, 0.837202, 0.020144 )
enabled = true
cast_to = Vector3( 0, 0, -100 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="forward" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00278151, 0.893648, 0 )
enabled = true
cast_to = Vector3( 0, 0, -10 )
collide_with_areas = true

[node name="SightRange" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="SightRange"]
shape = SubResource( 6 )

[node name="Eyes" type="Spatial" parent="."]

[node name="MovementTimer" type="Timer" parent="."]

[node name="scream" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.13889, 0 )
stream = ExtResource( 6 )
unit_db = 8.247
emission_angle_degrees = 35.4
emission_angle_filter_attenuation_db = -10.4

[connection signal="timeout" from="Pivot/Flash/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="body_entered" from="SightRange" to="." method="_on_SightRange_body_entered"]
[connection signal="body_exited" from="SightRange" to="." method="_on_SightRange_body_exited"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_MovementTimer_timeout"]
